# study-partner-ai

./: .gitignore  Dockerfile  README.md  TESTING_GUIDE.md  api_service.py  demo_intelligence.py  gradio_app.py  main.py  minimal_backend.py  pyproject.toml  test_coach_manual.py  test_coach_scheduler_integration.py  test_course_to_plan.py  test_integration.py
.github/workflows/: ai.yml
ML/fatigue-merged/: config.py  main.py
ML/fatigue-merged/modules/: face_features.py  fatigue_rules.py  webcam.py
ML/fatigue-merged/utils/: helpers.py  visualization.py
ML/focus/: requirements.txt
ML/focus/notebooks/: data_exploration.ipynb  model_training.ipynb  preprocessing_and_split.ipynb  test.ipynb
ML/focus/src/: balance_data.py  collect_data.py  generate_labels.py  live_test.py  prepare_data.py  test_camera.py  test_model.py  test_video.py  update_labels.py
agents/: orchestrator.py  test_system.py
agents/coach/: __init__.py  agent.py  coach.py
agents/coach/decision/: llm_decider.py  prompt.py
agents/coach/models/: schemas.py
agents/coach/rules/: rule_engine.py
agents/coach/services/: nudge_utils.py  planner_repository.py  state_store.py
agents/coach/tests/: test_agent.py  test_coach.py
agents/course_ingestion/: agent.py
agents/course_ingestion/enrichment/: llm_enricher.py  task_generator.py
agents/course_ingestion/extraction/: ocr.py  pdf_loader.py
agents/course_ingestion/normalization/: normalizer.py  schema.py  tokenizer.py
agents/course_ingestion/parsing/: layout_parser.py  section_builder.py
agents/course_ingestion/services/: database_service.py
agents/course_ingestion/tests/: test_ingestion.py
agents/evaluator/: __init__.py  evaluator.py
agents/evaluator/models/: concept_model.pt
agents/evaluator/services/: eval_utils.py
agents/evaluator/tests/: test_evaluator.py
agents/planner/: __init__.py  agent.py  planner.py
agents/planner/decomposition/: llm_decomposer_real.py  simple_decomposer.py
agents/planner/memory/: pacing_store.py
agents/planner/models/: task_graph.py
agents/planner/rag/: __init__.py  embeddings.py  indexer.py  prompt_builder.py  retriever.py  tokenizer.py
agents/planner/rules/: buffer_inserter.py  clarification.py  clarification_checker.py  constraints.py  feasibility.py  review_inserter.py
agents/planner/services/: task_utils.py
agents/planner/tests/: test_planner.py
agents/scheduler/: __init__.py  agent.py
agents/scheduler/models/: __init__.py  schedule_schema.py  time_slot.py
agents/scheduler/scoring/: __init__.py  slot_scoring.py
agents/scheduler/services/: __init__.py  calendar_normalizer.py  schedule_updater.py  scheduling_heuristics.py  slot_generator.py
agents/scheduler/tests/: __init__.py  test_planner_to_scheduler_db.py  test_scheduler.py
agents/tests/: test_full_workflow.py  test_ingestion_to_planner.py  test_planner_to_scheduler.py
config/: constants.py  settings.py
models/: __init__.py  decision.py  session.py  task.py
orchestrator/: __init__.py  meta_agent.py
scripts/: start-ai-stack.sh  stop.sh  test_integration.py
services/: __init__.py  ai_logger.py  database.py  signal_processor.py
services/ai_orchestrator/: __init__.py  orchestrator.py  test_coach_integration.py
services/api/: main.py
services/schedule_orchestrator/: orchestrator.py
services/signal_processing_service/: __init__.py  fatigue_adapter.py  fatigue_detector.py  focus_adapter.py  focus_detector.py  repository.py  service.py  signal_snapshot.py  test_integration.py
utils/: __init__.py  document_processor.py  math_utils.py
