[tool.poetry]
name = "study-partner-ai"
version = "0.1.0"
description = ""
authors = ["Your Name <kammoun.mohamedaziz@esprit.tn>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.15"
numpy = {version = ">=2.4.1,<3.0.0"}
torch = {version = ">=2.10.0,<3.0.0", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'"}
torchvision = {version = ">=0.15.0,<1.0.0"}
torchaudio = {version = ">=2.0.0,<3.0.0"}
scikit-learn = {version = ">=1.8.0,<2.0.0"}
sentence-transformers = {version = ">=2.0.0,<3.0.0"}
faiss-cpu = {version = ">=1.7.0,<2.0.0"}
gradio = {version = ">=4.0.0,<5.0.0"}
pytesseract = {version = ">=0.3.10,<1.0.0"}
Pillow = {version = ">=10.0.0,<11.0.0"}
PyPDF2 = {version = ">=3.0.0,<4.0.0"}
reportlab = {version = ">=4.0.0,<5.0.0"}
PyMuPDF = {version = ">=1.23.0,<2.0.0"}
pymongo = {version = ">=4.6.0,<5.0.0"}
pdf2image = {version = ">=1.17.0,<2.0.0"}
pydantic = {version = ">=2.0.0,<3.0.0"}
requests = {version = ">=2.31.0,<3.0.0"}
streamlit = {version = ">=1.53.1,<2.0.0"}
google-generativeai = {version = ">=0.8.6,<0.9.0"}
python-dotenv = {version = ">=1.0.0,<2.0.0"}
jupyter = {version = ">=1.0.0,<2.0.0"}
matplotlib = {version = ">=3.8.0,<4.0.0"}
opencv-python = {version = ">=4.8.0,<5.0.0"}
pandas = {version = ">=2.0.0,<3.0.0"}
seaborn = {version = ">=0.12.0,<1.0.0"}
tensorflow = {version = ">=2.15.0,<3.0.0"}
fastapi = {version = ">=0.115.0,<1.0.0"}
uvicorn = {version = ">=0.34.0,<1.0.0"}
scipy = {version = ">=1.11.0,<2.0.0"}
mediapipe = {version = ">=0.10.0,<1.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
flake8 = ">=7.3.0,<8.0.0"
black = ">=26.1.0,<27.0.0"
mypy = ">=1.19.1,<2.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
httpx = ">=0.27.0,<1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = ["__pycache__", ".venv", ".git", "build", "dist"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["agents"]
addopts = "-v"
